litserve api added

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -108,7 +108,7 @@
     "from io import BytesIO\n",
     "\n",
     "# URL of the image\n",
-    "url = \"https://raw.githubusercontent.com/sitamgithub-MSIT/test/main/assets/brain-tumor.jpg\"\n",
+    "url = \"https://raw.githubusercontent.com/sitamgithub-MSIT/BioMedAI/main/assets/brain-tumor.jpg\"\n",
     "\n",
     "# Fetch the image from the URL\n",
     "response = requests.get(url)\n",
@@ -162,18 +162,13 @@
     }
    ],
    "source": [
-    "# Set temperature and max output length for generation\n",
-    "temperature = 0.2\n",
-    "max_new_tokens = 1024\n",
-    "\n",
     "# Generate text using the inference mode\n",
     "with torch.inference_mode():\n",
     "    generation_output = model.generate(\n",
     "        **inputs,\n",
-    "        max_new_tokens=max_new_tokens,\n",
+    "        max_new_tokens=1024,\n",
     "        eos_token_id=tokenizer.encode(\"<|eot_id|>\"),\n",
-    "        do_sample=temperature > 0,\n",
-    "        temperature=temperature,\n",
+    "        do_sample=False,\n",
     "        use_cache=True\n",
     "    )\n",
     "\n",
