gradio app added

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Setup"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -31,6 +38,13 @@
     "from src.dragonfly.models.modeling_dragonfly import DragonflyForCausalLM\n",
     "from src.dragonfly.models.processing_dragonfly import DragonflyProcessor\n",
     "from pipeline.train.train_utils import random_seed"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Load and Configure Model"
    ]
   },
   {
@@ -83,6 +97,13 @@
     "model = DragonflyForCausalLM.from_pretrained(\"togethercomputer/Llama-3.1-8B-Dragonfly-Med-v2\")\n",
     "model = model.to(torch.bfloat16)\n",
     "model = model.to(device)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Prepare Input"
    ]
   },
   {
@@ -144,6 +165,13 @@
     "    is_generate=True,\n",
     ")\n",
     "inputs = inputs.to(device)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Generate Response"
    ]
   },
   {
